--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -754,6 +754,9 @@
 }
 
 @media (max-width: 767px) {
+
+	.loTryTitle h2 span {font-size: 60px;}
+	.loTryTitle h2 {font-size: 51px;	}
 	.hScroll {
 		overflow: auto;
 		white-space: nowrap;
@@ -1481,6 +1484,12 @@
 @media (max-width: 414px) {}
 
 @media (max-width: 375px) {
+	.rfel {
+		
+		background-position: top;
+	  }
+	.loTryTitle h2 span {font-size: 40px;}
+	.loTryTitle h2 {font-size: 41px;	}
 	h1 {font-size: 28px;}
 	.dZip {	display: block;}
 	.dZip button,.dZip input{ width: 100%;}
