--- a/src/Assets/css/lightMode.css
+++ b/src/Assets/css/lightMode.css
@@ -140,9 +140,9 @@ body.light {
     ;
 }
 
-.light .labelList li:first-child {
+/* .light .labelList li:first-child {
     border-right: 1px rgb(63 63 63 / 20%) solid;
-}
+} */
 
 .light img.darkLogo {
     display: none;
