--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -1459,18 +1459,16 @@
 @media (max-width: 414px) {}
 
 @media (max-width: 375px) {
-	.rfel {
-		
-		background-position: top;
-	  }
+
+	.rfel {	background-position: top;}
 	.loTryTitle h2 span {font-size: 40px;}
-	.loTryTitle h2 {font-size: 41px;	}
+	.loTryTitle h2 {font-size: 41px;}
 	h1 {font-size: 28px;}
 	.dZip {	display: block;}
 	.dZip button,.dZip input{ width: 100%;}
 	.downloadZip input {right: 0 !important;}
 	.auctionHistory {width: 100%;}
-	.titleRight {display: flex;align-items: center;overflow: auto;	white-space: nowrap;height: 55px;	}
+	.titleRight {display: flex;align-items: center;overflow: auto;	white-space: nowrap;height: 55px;}
 	.detailPostOption .gry_btn {margin-left: 0;	font-size: 10px;}
 	.pt_sm_50 {	padding-top: 20px;}
 	.galleryPh .ant-image .ant-image-img {width: 368px;height: 44px;}
@@ -1496,11 +1494,11 @@
 	.ListDealer .card_postImg {	height: 150px;}
 	.ListDealer .card_post {padding: 0;	background: #121212;}
 	.clenderStyle {top: 117px;}
-	span.rbc-btn-group {display: block;	width: 100%;display: contents;	}
-	.dark .orange_btn {	width: 100%;	}
-	.evT .card_postImg {
-		height: 150px;
-	}
+	span.rbc-btn-group {display: block;	width: 100%;display: contents;}
+	.dark .orange_btn {	width: 100%; }
+	.evT .card_postImg {height: 150px;}
+	.imgCross span div {width: 115px;height: 63px; margin: 5px;}
+	.imgCross span button.close {top: -20px;}
 }
 
 @media (min-width: 360px) {
