--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1595,7 +1595,7 @@ select.field option {
 }
 
 .plan_card.plan_Plus:hover:before {
-  background-color: #f7931a;
+  background-color: #03A9F4;
 }
 
 .plan_WhiteGlove .plan_cardHead h4 {
@@ -6585,4 +6585,23 @@ p.userIco.bgS {
 	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
 	40% {transform: translateY(-30px);}
 	60% {transform: translateY(-15px);}
+}
+
+
+ul.post_labelList li p.userIco {
+  width: 40px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-bottom: 0;
+}
+
+ul.post_labelList li p.userIco span img {
+  width: 30px;
+  height: 28px;
+  object-fit: cover;
+
+  border-radius: 100%;
 }
