--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4579,7 +4579,7 @@ input.ant-select-selection-search-input {
 }
 
 .col-12.slider_ht {
-  height: 550px;
+  /* height: 550px; */
 }
 
 .card_postImg.dlr img {}
