--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6616,3 +6616,85 @@ svg.svg-inline--fa.fa-trash-can:hover { color: #f7931b;}
     display: flex;
     justify-content: space-evenly;
 }
+
+.entries_count{
+  display: flex;
+  justify-content: space-between;
+}
+
+.entries_count2{
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+   
+    align-items: baseline;
+}
+
+
+ .entries_count3{
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
+ }
+
+
+ .vs_grid_entries {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    margin-top: 0px;
+    z-index: 1;
+    position: relative;
+    background: rgb(238 238 238 / 80%);
+    width: 80%;
+}
+
+.vs_grid_entries .entries-count {
+    width: 75%;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+}
+
+
+.vs_grid_entries .fa-ticket {
+    color: #FFA500;
+    font-size: 20px;
+}
+
+.grid_entries_count {
+    margin: 0 5px 0 10px;
+    /* animation: accent 3s linear infinite; */
+}
+
+.vs_grid_entries .entries-count {
+    width: 75%;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+}
+
+
+.vs_grid_entries .multiplier-value {
+    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
+    width: 25%;
+    text-align: center;
+    background: #FFA500;
+}
+
+#main_width{
+  width: 40%;
+}
