--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6815,3 +6815,22 @@ ul.fwrList {
   display: flex;
   align-items: center;
 }
+ul.fwrList li span {
+  padding: 7px;
+}
+ul.fwrList li {
+  padding: 5px 10px 5px 5px;
+  border-right: 1px solid #3c3535;
+}
+ul.fwrList li:last-child {
+  border-right: 0;
+}
+.followers {
+  display: flex;
+}
+
+.followers button.btn {
+  text-align: center;
+  padding: 10px 15px;
+  font-size: 12px;
+}
