--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6869,3 +6869,9 @@ ul.fwrList li:last-child {
   background-color: #f7a405;
   border-color: #dee2e600 #dee2e600 #f8a504;
 }
+a.px-3.VIEWEY {
+  font-size: 19px;
+}
+.youPage.frrt .PostInfo {
+  padding: 0;
+}
