--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6875,3 +6875,7 @@ a.px-3.VIEWEY {
 .youPage.frrt .PostInfo {
   padding: 0;
 }
+
+h2 svg.svg-inline--fa.fa-pen-to-square {
+  font-size: 17px;
+}
