--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6879,3 +6879,20 @@ a.px-3.VIEWEY {
 h2 svg.svg-inline--fa.fa-pen-to-square {
   font-size: 17px;
 }
+.productDTl h2 {
+  font-size: 34px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+h5.catagories {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 200;
+  color: #9a9999;
+}
+.productDTl p.price__ {
+  font-size: 25px;
+  font-weight: 400;
+  padding-top: 13px;
+  padding-bottom: 15px;
+}
