--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3772,7 +3772,7 @@ h2.title_combo.title_Center.casrt {
 }
 
 button.removeBtn {
-  border: 1px solid #f7931b;
+  border: 0px solid #f7931b;
   color: #f7931b;
   background: transparent !important;
   padding: 1px 10px;
@@ -6737,7 +6737,7 @@ h2.verticalTitle:before {
 .tBB li.nav-item button {
   background: transparent;
   color: #fff;
-  min-width: 170px;
+  min-width: 161px;
 }
 .nav-tabs.tBB .nav-link.active {
   color: #f8a504;
@@ -6878,6 +6878,8 @@ a.px-3.VIEWEY {
 
 h2 svg.svg-inline--fa.fa-pen-to-square {
   font-size: 17px;
+  position: relative;
+  top: -18px
 }
 .productDTl h2 {
   font-size: 34px;
@@ -6922,7 +6924,20 @@ h5.catagories {
   justify-content: center;
 }
 
+.ttt table.cartSection tr td, table.cartSection tr th
+{border: none;}
+.ttt table.cartSection{border: none;}
 
+.vehicleSub.ttt .table tr {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-bottom: 1px solid #f7931b2b;
+  color: #fff;
+  border-top: 0px solid #dee2e6;
+}
+.vehicleSub.ttt table tr {
+  border-bottom: 1px solid #f7931b2b;
+}
 /*-----------------------*/
 
 .coupon-card {
@@ -7002,4 +7017,11 @@ select.size {
   display: flex;
   justify-content: center;
   align-items: baseline;
+}
+a.btn.small_btn {
+  padding: 10px 15px;
+  font-size: 12px;
+  font-weight: 100;
+  height: 28px;
+  line-height: 5px;
 }
