--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6863,7 +6863,6 @@ ul.fwrList li:last-child {
 .light .tBB li.nav-item button {
   background: transparent;
   color: #000;
-  
 }
 .light .nav-tabs.tBB .nav-link.active {
   color: #ffffff;
@@ -7029,4 +7028,22 @@ a.btn.small_btn {
   font-weight: 100;
   height: 28px;
   line-height: 5px;
+}
+
+.light .circle1,.light .circle2 { background: #fff;}
+
+.dTLPr {
+  display: flex;
+  border: 1px solid #2d2c2c;
+ 
+  padding: 10px;
+}
+.light .dTLPr {
+  display: flex;
+  border: 1px solid #e6e6e6;
+  background: #f7f7f7;
+  padding: 10px;
+}
+.productBigImgLeft img {
+  height: 131px;
 }
