--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3595,7 +3595,7 @@ button.iekbcc0.iekbcc9.ju367v73.ju367v7o.ju367v9c.ju367vn.ju367vec.ju367vex.ju36
     background-position: center;
 }
 .event {
-  background-image: url('../images/reeee.jpg');
+  background-image: url('../images/events-2019.jpg');
   height: 59vh;
  background-position: center;
 }
