--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7093,23 +7093,28 @@ tr.right-align .btn {
 }
 table.cartSection tr td, table.cartSection tr th {
   padding: 10px;
-  border-bottom: 1px solid #75717100;
-  border-right: 1px solid #75717100;
+ 
+  border-right: 1px solid #757171;
   background: #333333;
+}
+table.cartSection tr td:last-child {
+ 
+  border-right: 0px solid #757171;
+ 
 }
 tr.right-align td {
   background-color: #1c1919 !important;
 }
-table.cartSection.cartth tr th {
+/* table.cartSection.cartth tr th {
   background: #1c1919;
-}
+} */
 table.cartSection {
   border: 0px solid #757171;
 }
 
-.light tr.right-align td {
+/* .light tr.right-align td {
   background-color: #fefefe !important;
-}
+} */
 .light table.cartSection.cartth tr th, .light tr.right-align td {
   background: #f7f7f7;
 }
@@ -7119,9 +7124,13 @@ table.cartSection {
   border-right: 1px solid #75717100;
   background: #ffffff;
 }
-.light tr.right-align td {
-  background-color: #f7f7f7 !important;
-}
-button.btn.bg-danger {
-  background-color: #f7931b !important;
-}
+.light tr.right-align td { background-color: #f7f7f7 !important;}
+button.btn.bg-danger { background-color: #f7931b !important;}
+
+td.productImg { border-right: 1px solid #c8c8c8 !important;}
+table.cartSection.cartth tr th { border-bottom: 1px solid #757171;}
+tr.text-center.subTotal  { border-top: 1px solid #757171 !important;}
+table.cartSection.cartth tr th { border-bottom: 1px solid #757171; border-right: 1px solid #757171;}
+table.cartSection.cartth tr th:last-child { border-bottom: 1px solid #757171; border-right: 0px solid ;}
+tr.right-align .btn {   padding: 10px 15px;}
+.count {  background: black;  width: 39%;  margin: 0 auto;}
