--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7181,3 +7181,10 @@ box-shadow: 0px 0px 0px 0px;
 .light .cartth .count{
   color: #fff;
 }
+.row.asadw {
+  margin: 0 auto;
+  font-family: math;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
